# shachiku-rs

./: .env  .gitignore  Cargo.toml
src/: app.rs  main.rs
src/common/: constant.rs
src/controller/: auth.rs
src/model/: jwt.rs  mod.rs  response_body.rs  user.rs
src/service/: auth.rs
