[package]
name = "shachiku"
version = "0.1.0"
authors = ["Jackson Ming Hu <huming2207@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.9"
bson = "0.14.0"
dotenv = "0.15.0"
actix-web = "2"
actix-rt = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
web_ical = "0.1.0"
jsonwebtoken = "7.1.0"
log = "0.4.8"
bcrypt = "0.6.1"
r2d2 = "0.8.8"
r2d2-mongodb = "0.2.2"

[dependencies.chrono]
version = "0.4.10"
features = ["serde"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]
