[package]
name = "shachiku"
version = "0.1.0"
authors = ["Jackson Ming Hu <huming2207@gmail.com>"]
edition = "2018"

[dependencies]
mongodb = "0.9"
bson = "0.14.0"
dotenv = "0.15.0"
actix-web = "2"
actix-rt = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
web_ical = "0.1.2"
jsonwebtoken = "7.1.0"
log = "0.4.8"
env_logger = "0.7.1"
validator = "0.10"
validator_derive = "0.10"
rust-argon2 = "0.8"

[dependencies.chrono]
version = "0.4.11"
features = ["serde"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]
